# yap-cc

./: .dockerignore  .gitignore  .npmignore  ARCHITECTURE.md  ARCHITECTURE_REVIEW.md  CHANGELOG.md  Dockerfile.backend  Dockerfile.frontend  LICENSE  Makefile  PROJECT.md  README.md  REQUIREMENTS.md  TESTING.md  TEST_RESULTS.md  docker-compose.yml  docker-entrypoint.sh  mkdocs.yml  package.json
backend/: pyproject.toml
backend/agents/: assistant.md
backend/src/: config.py  logging_config.py  server.py
backend/src/api/routes/: agents.py  browser.py  environments.py  files.py  heartbeat.py  knowledge.py  memory.py  sessions.py  settings.py  setup.py  skills.py  tasks.py  triggers.py
backend/src/api/websocket/: handlers.py  manager.py
backend/src/core/: agent.py  environment.py  events.py  heartbeat.py  interaction_parser.py  models.py  provider.py  seed.py  session.py  shell_env.py  skill.py  system_prompt.md  task.py  tool.py  trigger.py  venv_setup.py
backend/src/messaging/: base.py  manager.py  telegram.py
backend/src/preflight/: __init__.py  cli.py  validators.py
backend/src/providers/: claude_cli.py  openrouter.py
backend/src/service/: browser_service.py  memory.py  queue.py  scheduler.py  triggers.py  vnc_service.py
backend/src/tools/: __init__.py  bash.py  browser.py  chat.py  interaction.py
backend/tests/: conftest.py  test_agent.py  test_models.py  test_provider.py  test_session.py
backend/tests/integration/: __init__.py  conftest.py  test_browser_tools.py  test_docker.py  test_providers.py  test_server_startup.py  test_venv_setup.py
(+115 files in other folders)
